assets/css/content.css
.nuxt-content h1 {
  @apply text-4xl border-b border-gray-400 my-4;
}

.nuxt-content h2 {
  @apply text-3xl border-b border-gray-400 my-4;
}

.nuxt-content h3 {
  @apply text-2xl my-4;
}

.nuxt-content h4 {
  @apply text-xl my-4 font-bold;
}

.nuxt-content h5 {
  @apply text-lg my-4 font-bold;
}

.nuxt-content h6 {
  @apply text-base my-4 font-bold;
}

.nuxt-content p {
  @apply my-4;
}

.nuxt-content ul {
  @apply list-disc list-inside;
}

.nuxt-content ol {
  @apply list-decimal list-inside;
}

.nuxt-content li ul, .nuxt-content li ol {
  @apply ml-4;
}

.nuxt-content img {
  max-height: 420px;
  width: 100%;
}

.nuxt-content img.sm {
  max-height: 180px;
}

.nuxt-content p code {
  @apply text-red-800;
  font-size: 0.9em;
}

.nuxt-content a {
  @apply text-blue-700;
}

.nuxt-content a:hover {
  @apply underline;
}

.nuxt-content figure figcaption {
  @apply text-gray-800 text-sm mt-1;
}

.nuxt-content figure a {
  @apply inline-block;
}

.nuxt-content table {
  width: 100%;
}

.nuxt-content table td, .nuxt-content table th {
  @apply border border-gray-400 px-2;
}

.nuxt-content table th {
  @apply text-left uppercase;
  background-color: #e7e9ee;
}

